// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parallel option should match snapshot for the "2" value: assets 1`] = `
{
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "2" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "2" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "false" value: assets 1`] = `
{
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "false" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "false" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: assets 1`] = `
{
  "entry-0.css": "body{color:red}a{color:blue}",
  "entry-1.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: assets 1`] = `
{
  "eight.css": "body{color:red}a{color:blue}",
  "five.css": "body{color:red}a{color:blue}",
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "seven.css": "body{color:red}a{color:blue}",
  "six.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: assets 1`] = `
{
  "entry-0.css": "body{color:red}a{color:blue}",
  "entry-1.css": "body{color:red}a{color:blue}",
  "entry-2.css": "body{color:red}a{color:blue}",
  "entry-3.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: assets 1`] = `
{
  "main.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value: assets 1`] = `
{
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "true" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "true" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot for the "undefined" value: assets 1`] = `
{
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot for the "undefined" value: errors 1`] = `[]`;

exports[`parallel option should match snapshot for the "undefined" value: warnings 1`] = `[]`;

exports[`parallel option should match snapshot when a value is not specify: assets 1`] = `
{
  "four.css": "body{color:red}a{color:blue}",
  "one.css": "body{color:red}a{color:blue}",
  "three.css": "body{color:red}a{color:blue}",
  "two.css": "body{color:red}a{color:blue}",
}
`;

exports[`parallel option should match snapshot when a value is not specify: errors 1`] = `[]`;

exports[`parallel option should match snapshot when a value is not specify: warnings 1`] = `[]`;
